# Primecam-Bias

./: .gitignore  LICENSE  README.md  buggyTodo.md
board/: 551XX09F.stp  BiasCircuit.kicad_sch  BiasCircuit.kicad_sch-bak  LNA_Bias.kicad_sym  VMECARDTEMPLATE.kicad_pcb  VMECARDTEMPLATE.kicad_prl  VMECARDTEMPLATE.kicad_pro  fp-info-cache  fp-lib-table  ibom.config.ini  primecamLNABiasPotVreg-CostComp.ods  primecamLNABiasPotVreg.kicad_pcb  primecamLNABiasPotVreg.kicad_prl  primecamLNABiasPotVreg.kicad_pro  primecamLNABiasPotVreg.kicad_sch  primecamLNABiasPotVreg.kicad_sch-bak  primecamLNABiasPotVreg_2ch.kicad_pcb  primecamLNABiasPotVreg_2ch.kicad_pro  primecamLNABiasPotVreg_2ch.kicad_sch  sym-lib-table
board/primecamLNABiasPotVreg.pretty/: 5747842-4.stp  Cap_b_1411.kicad_mod  DO-214BA_MCH.kicad_mod  H204CGDL.kicad_mod  TE_5747842-4.kicad_mod
docs/: .gitignore  _config.yml  examples.md  gettingstarted.md  hardware.md  index.md  raspberrypi.md  software.md  todo.md  userguide.md
docs/_includes/: nav.html
docs/_posts/: 2025-04-04-welcome-to-jekyll.markdown
primecambias_arduino_testbench/: notes.md  primecambias_arduino_testbench.ino
sparkybiasd/: Cargo.toml  dockerfile  makefile  pyproject.toml  run-sparkybiasd  sparkybiasd.service  test  update_daemon.py  update_daemon.sh  upload
sparkybiasd/src/sparkybiasd/: __init__.py  daemon.py  dconf.py  fuckme.py  hardware.py  midlevel.py  sparkybias.py  testhw.py
sparkybiasd/tests/: commanding.py  shit.txt  test_bad_commands.py  test_commanding.py  test_for_problemchild.py  test_midlevel.py  test_valid_commands.py
(+1 files in other folders)
