[project]
name = "sparkybiasd"
version = "0.2.4"
description = ""
authors = [
    {name = "Cody Roberson",email = "carobers@asu.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "smbus2 (==0.4.2)",
    "omegaconf (>=2.3.0,<3.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "redis (>=6.0.0,<7.0.0)",
    "requests (>=2.32.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "sparkybiasd", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
